---
title: Kahoot Clone - ERD
---

erDiagram
    User {
        id Int[PK]
        email String
        firstName String
        lastName String
    }

    Question {
        id Int[PK]
        question String
        answer String
        options String[3]
        session Session[FK]
        order Int
        completed Boolean
        timeToSee Int
        timeToAnswer Int
        answerTimeStartedAt Date
    }

    Session {
        id Int[PK]
        name String
        host User[FK]
        started Boolean
        startedAt Date
        ended Boolean
        endedAt Date
        showGraph Boolean
    }

    Answer {
        id Int[PK]
        question Question[FK]
        session Session[FK]
        respondent User[FK]
        answer String
        answeredTime Date
        position Int
        marks Int
    }

    SessionParticipant {
        participant User[PK]
        session Session[PK]
    }

    Winner {
        id String[PK]
        session Session[FK]
        participant User[FK]
        position Int
        marks Int
    }

    Session |o--|{ User: "Can host"

    SessionParticipant }|--|| Session: "Can have"

    SessionParticipant }|--|| User: "Can participate"

    Session ||--|{ Question: "Can have"

    Answer }o--|| Question: "Can Have"

    Answer }o--|| Session: "Can Have"

    Answer ||--|| User: "Can Answer"

    User ||--|{ Winner: "Might be a"

    Session ||--|{ Winner: "Have"
